--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is my blogging app",
   "main": "app.js",
   "scripts": {
+    "start": "npm run build && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
