--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "npm run build && node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'build script executed'"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +16,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "fetch": "^1.1.0",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.13"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.12.13",
+    "nodemon": "^2.0.15",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
